CICO-36588 initial style commit

--- a/zest_station/css/less/mixins.less
+++ b/zest_station/css/less/mixins.less
@@ -23,6 +23,22 @@
 			border-bottom-right-radius: @radius;
 			border-bottom-left-radius: @radius;
 		}
+		.top-left(@radius: 8px) { 
+			border-top-left-radius: @radius;
+		}
+
+		.top-right(@radius: 8px) { 
+			border-top-right-radius: @radius; 
+		}
+
+		.bottom-left(@radius: 8px) { 
+			border-bottom-left-radius: @radius;
+		}
+
+		.bottom-right(@radius: 8px) { 
+			border-bottom-right-radius: @radius;
+		}
+
 	}
 	
 	.transition (@property: all, @duration: 0.3s, @easing: cubic-bezier(.10, .10, .25, .90)) {
