--- a/admin/partials/snapshotSetup/adSnapshotSetup.html
+++ b/admin/partials/snapshotSetup/adSnapshotSetup.html
@@ -28,6 +28,41 @@
 
                     
                 </fieldset>
+
+                <ad-form-title full-width="true" form-title="{{'FULL_EXPORT_RESULTS_LABEL' | translate}}" ng-show="fullExportData.length > 0"></ad-form-title>
+
+                <table class="grid datatable" ng-table="fullTableParams" template-pagination="" 
+        ng-show="showTableDetails && fullExportData.length > 0">
+
+                    <tbody> 
+                        <tr ng-repeat="exportData in $data"> 
+                            <td  sortable="'date'" data-title="'Date'">
+                                <a  class="edit-data-inline">
+                                    {{exportData.date}} 
+                                </a>                        
+                            </td>
+
+                            <td  data-title="'Time'">
+                                <a class="edit-data-inline">{{exportData.time}} </a>
+                            </td>
+
+                            <td  data-title="'Url'">
+                                <a class="edit-data-inline">{{exportData.url}} </a>
+                            </td>
+
+                            <td  data-title="'Result'">
+                                <a class="edit-data-inline">{{exportData.result}} </a>
+                            </td>
+
+                            <td  data-title="'Details'">
+                                <a class="edit-data-inline">{{exportData.details}} </a>
+                            </td>
+
+                            
+                        </tr>
+                    </tbody> 
+                </table>
+
                 <ad-form-title full-width="true" form-title="{{'INCREMENTAL_EXPORT_LABEL' | translate}}"></ad-form-title>
                 <ad-toggle-button is-checked="snapshotData.incremental_export_enabled" label="{{'INCREMENTAL_EXPORT_SWITCH_LABEL'| translate}}"></ad-toggle-button>
                     <label class="radio" ng-class="{'checked':snapshotData.incremental_export_option== 'once'}" ng-show="snapshotData.incremental_export_enabled">
@@ -113,6 +148,40 @@
                         </div>
                     </div>
                 </fieldset>
+
+                <ad-form-title full-width="true" form-title="{{'INCREMENTAL_EXPORT_RESULTS_LABEL' | translate}}" ng-show="incrementalExportData.length > 0"></ad-form-title>
+
+                <table class="grid datatable" ng-table="incrementalTableParams" template-pagination="" 
+        ng-show="showTableDetails && incrementalExportData.length > 0">
+
+                    <tbody> 
+                        <tr ng-repeat="exportData in $data"> 
+                            <td  sortable="'date'" data-title="'Date'">
+                                <a  class="edit-data-inline">
+                                    {{exportData.date}} 
+                                </a>                        
+                            </td>
+
+                            <td  data-title="'Time'">
+                                <a class="edit-data-inline">{{exportData.time}} </a>
+                            </td>
+
+                            <td  data-title="'Url'">
+                                <a class="edit-data-inline">{{exportData.url}} </a>
+                            </td>
+
+                            <td  data-title="'Result'">
+                                <a class="edit-data-inline">{{exportData.result}} </a>
+                            </td>
+
+                            <td  data-title="'Details'">
+                                <a class="edit-data-inline">{{exportData.details}} </a>
+                            </td>
+
+                            
+                        </tr>
+                    </tbody> 
+                </table>
 
                 <div class="actions float">
                     <button type="button" class="button blank add-data-inline" ng-click="goBackToPreviousState()">
