CICO-37049 reduced font size

--- a/admin/partials/snapshotSetup/adSnapshotSetup.html
+++ b/admin/partials/snapshotSetup/adSnapshotSetup.html
@@ -37,25 +37,25 @@
                     <tbody> 
                         <tr ng-repeat="exportData in $data"> 
                             <td  data-title="'Date'">
-                                <a  class="edit-data-inline">
+                                <a  class="edit-data-inline snapshot-export-history-text">
                                     {{exportData.created_at_date}} 
                                 </a>                        
                             </td>
 
                             <td  data-title="'Time'">
-                                <a class="edit-data-inline">{{exportData.created_at_time}} </a>
+                                <a class="edit-data-inline snapshot-export-history-text">{{exportData.created_at_time}} </a>
                             </td>
 
-                            <td  data-title="'Url'">
-                                <a class="edit-data-inline">{{exportData.url}} </a>
+                            <td  data-title="'Url'" header-class="width-30">
+                                <a class="edit-data-inline snapshot-export-history-text">{{exportData.url}} </a>
                             </td>
 
                             <td  data-title="'Result'">
-                                <a class="edit-data-inline">{{exportData.result}} </a>
+                                <a class="edit-data-inline snapshot-export-history-text">{{exportData.result}} </a>
                             </td>
 
-                            <td  data-title="'Details'">
-                                <a class="edit-data-inline">{{exportData.details}} </a>
+                            <td  data-title="'Details'" header-class="width-30">
+                                <a class="edit-data-inline snapshot-export-history-text">{{exportData.details}} </a>
                             </td>
 
                             
@@ -157,25 +157,25 @@
                     <tbody> 
                         <tr ng-repeat="exportData in $data"> 
                             <td  data-title="'Date'">
-                                <a class="edit-data-inline" >
+                                <a class="edit-data-inline snapshot-export-history-text" >
                                     {{exportData.created_at_date}} 
                                 </a>                        
                             </td>
 
                             <td  data-title="'Time'">
-                                <a class="edit-data-inline">{{exportData.created_at_time}} </a>
+                                <a class="edit-data-inline snapshot-export-history-text">{{exportData.created_at_time}} </a>
                             </td>
 
-                            <td  data-title="'Url'">
-                                <a class="edit-data-inline">{{exportData.url}} </a>
+                            <td  data-title="'Url'" header-class="width-30">
+                                <a class="edit-data-inline snapshot-export-history-text">{{exportData.url}} </a>
                             </td>
 
                             <td  data-title="'Result'">
-                                <a class="edit-data-inline">{{exportData.result}} </a>
+                                <a class="edit-data-inline snapshot-export-history-text">{{exportData.result}} </a>
                             </td>
 
-                            <td  data-title="'Details'">
-                                <a class="edit-data-inline">{{exportData.details}} </a>
+                            <td  data-title="'Details'" header-class="width-30">
+                                <a class="edit-data-inline snapshot-export-history-text">{{exportData.details}} </a>
                             </td>
 
                             
