CICO-36888 fixes minor style issue with hotel admin > download tags popup

--- a/admin/css/admin_ng.css.less
+++ b/admin/css/admin_ng.css.less
@@ -1505,3 +1505,8 @@ end of help-tip
 .help-space{
   margin-left:5px;
 }
+
+.station-lang-download-popup{
+    padding: 15px !important;
+    border-radius: .3em !important;
+}
