--- a/rover/partials/actionsManager/rvActionsManager.html
+++ b/rover/partials/actionsManager/rvActionsManager.html
@@ -211,7 +211,7 @@
         <div class="summary add-content form" ng-include="'/assets/partials/actionsManager/rvAddAction.html'">
         </div>
     </div>
-    <!-- <span ng-include="'/assets/partials/actionsManager/rvActionManagerReportPrint.html'"></span> -->
+    <div ng-include="'/assets/partials/actionsManager/rvActionManagerReportPrint.html'"></div>
 </section>
 
 <!-- Post form -->
