--- a/rover/partials/bill/rvBillCard.html
+++ b/rover/partials/bill/rvBillCard.html
@@ -101,13 +101,14 @@
 										<span translate>BILL #{{billTab.bill_number}}</span>
 										{{'SUPPRESSED_RATES_TEXT' | translate}}
 									</div>
-									<div class="payment" ng-show="billTab.credit_card_details.payment_type !== 'CC'">
+									<div class="payment" ng-show="billTab.credit_card_details.payment_type !== 'CC' && billTab.is_active">
 										{{billTab.credit_card_details.payment_type_description}}
 									</div>
-									<figure class="card-logo" ng-show="billTab.credit_card_details.payment_type == 'CC'">
+									<figure class="card-logo" ng-show="billTab.credit_card_details.payment_type == 'CC' &&billTab.is_active">
 										<img ng-src="/assets/images/{{billTab.credit_card_details.card_code}}.png" alt="" class="credit-card-image">
 										<span class="number"> {{billTab.credit_card_details.card_number}}</span>
 									</figure>
+									<div class="payment" ng-show="!billTab.is_active">Moved to A/R</div>
 								</div>
 							</li>
 							<li class="new-bill" ng-show="reservationBillData.bills.length<10 && isStandAlone">
