--- a/guestweb/checkin/partials/Huntley/checkinUpgradeRoom.html
+++ b/guestweb/checkin/partials/Huntley/checkinUpgradeRoom.html
@@ -58,7 +58,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="col-xs-3 upgrades-btn" ng-click="upgradeClicked(slide.upsell_amount_id,slide.upgrade_room_number)">
+									<div class="col-xs-3 upgrades-btn" ng-click="upgradeClicked(slide.upgrade_room_type_id,slide.upgrade_room_number)">
 										<img  src="/assets/guestweb/img/upgrade_icon.png" width="25" height="25" alt=""/>
 										<p>SELECT THIS <br /> UPGRADE</p>
 									</div>
