--- a/guestweb/common_templates/partials/fontainebleau/checkin/gwRoomUpgrades.html
+++ b/guestweb/common_templates/partials/fontainebleau/checkin/gwRoomUpgrades.html
@@ -55,7 +55,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="col-xs-3 upgrades-btn mob-paddding-top-5" ng-click="upgradeClicked(slide.upsell_amount_id,slide.upgrade_room_number)">
+                            <div class="col-xs-3 upgrades-btn mob-paddding-top-5" ng-click="upgradeClicked(slide.upgrade_room_type_id,slide.upgrade_room_number)">
                                 <div class="upgrade-icon"></div>
                                 <p class="center-align mob-margin-top-3">SELECT THIS <br /> UPGRADE</p>
                             </div>
