--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1841,3 +1841,16 @@
             transform: rotate(360deg); 
         }
     }
+
+
+.select-with-room-number{
+    position: absolute;
+    right:15px;
+    font-size: x-large;
+    margin-top: -5px;
+}
+.select-with-conf-number{
+    position: absolute;
+    right:15px;
+    margin-top: 25px;   
+}
