--- a/admin/partials/zestStation/adZestStationRoomUpsell.html
+++ b/admin/partials/zestStation/adZestStationRoomUpsell.html
@@ -20,11 +20,19 @@
         <div class="entry full-width" ng-show="data.enforce_max_upsell_offered">
             <label translate>OFFER_LEVEL_MIX_INSTRUCTIONS</label>
             <span class="numeric-input-label" translate>TIER_2</span>
-            <input type="text" ng-model="data.upsell_compositions_in_percentage.tier_2" placeholder="" class="numeric-input-field" ng-change="percentageChanged('tier2')" maxlength="2">
+            <div class="entry full-width float">
+                <div class="select select-col select-margin">
+                    <select ng-options="perscentage as perscentage for perscentage  in perscentages" ng-model="data.upsell_compositions_in_percentage.tier_2" ng-change="percentageChanged('tier2')"></select>
+                </div>
+            </div>
         </div>
         <div class="entry full-width" ng-show="data.enforce_max_upsell_offered">
             <span class="numeric-input-label" translate>TIER_3</span>
-            <input type="text" ng-model="data.upsell_compositions_in_percentage.tier_3" placeholder="" class="numeric-input-field" ng-change="percentageChanged('tier3')" maxlength="2">
+            <div class="entry full-width float">
+                <div class="select select-col select-margin">
+                    <select ng-options="perscentage as perscentage for perscentage  in perscentages" ng-model="data.upsell_compositions_in_percentage.tier_3" ng-change="percentageChanged('tier3')"></select>
+                </div>
+            </div>
         </div>
         <div id="options" class="full-width entry">
             <br/>
