CICO-37356 Added button color

--- a/guestweb/common_css/hotel_chicago/theme.less
+++ b/guestweb/common_css/hotel_chicago/theme.less
@@ -100,7 +100,7 @@ a,a:hover,.main-text,
 /*----------------- date picker -------------------------*/
 
 .pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {
-  color: #363634;
+  color: #23225A;
   color: transparent;
 }
 
@@ -109,7 +109,7 @@ a,a:hover,.main-text,
 }
 
 .pickadate-cell .pickadate-active {
-  background-color: #23225A ;
+  background-color: #23225A !important;
   color:#fff ;
 }
 .pickadate-head{
