CICO-37131 popup for freshdesk

--- a/stylesheets/less/login.less
+++ b/stylesheets/less/login.less
@@ -3,6 +3,8 @@
 @import "common/01-B_variables.less"; 
 @import "common/01-C_mixins.less";
 @import "common/01-D_mixins-animations.less"; 
+@import "app/01-B_variables.less";
+@import "app/03_graphics.less";
 
 /* Reset				==================================*/
 	* { 
@@ -213,7 +215,7 @@
 		   	color: @grey3;
 		   	font-weight: 300;
 		   	font-size: 16px;
-		}au
+		}
 	}
 
 	button {
@@ -412,12 +414,6 @@
 		}
 	}
 
-@import "common/01-B_variables.less";
-@import "common/01-C_mixins.less"; 
-@import "common/01-D_mixins-animations.less"; 
-@import "app/01-B_variables.less";
-@import "app/03_graphics.less";
-
 .search-form { 
     .float;
     margin-top:35px;
@@ -590,13 +586,13 @@
                     .size(98%, 100%);
                 }
 
-                @media only screen and (min-width: 600px) {
+                @media only screen and (max-width: 600px) {
                     .square(640px);
                 }
             }
         }
 
-        @media only screen and (min-width: 600px) {
+        @media only screen and (max-width: 600px) {
             width: auto;
         }
     }
@@ -608,7 +604,6 @@
 		left: 0;
 		height: 100%;
 		z-index: 9999;
-		visibility: hidden;
 
 		#modal-close {
 			position: absolute;
@@ -639,8 +634,6 @@
 			z-index: 9990;
 			.background(@white);
 			#border-radius > .rounded(3px);
-			.scale3d(0.5, 0.5, 1);
-			.opacity(0);
 			.transition;
 
 			.status {
@@ -844,7 +837,7 @@
 
 	}
 
-	@media only screen and (min-width: 600px) {
+	@media only screen and (max-width: 600px) {
 		#modal,
 		.inline-modal {
 			top: 50%;
