--- a/login/partials/login.html
+++ b/login/partials/login.html
@@ -38,6 +38,6 @@
 	</form>
 
 	<div class="support">
-		For questions please contact your hotel administrator or visit the StayNTouch <a href="https://stayntouch.freshdesk.com/support/home">Support Portal</a> for more information.
+		For questions please contact your hotel administrator or visit the StayNTouch <a href="#" ng-click="onClickSupportLink()">Support Portal1</a> for more information.
 	</div>
 </div>
