CICO-36588 modifying styles

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -554,6 +554,21 @@
             }
         }
     }
+
+    .two-upgrades-list{
+        width: 66%;
+        margin: 0 auto;
+        li{
+            width:49%;
+        }
+    }
+    .single-upgrade-list{
+        width: 33%;
+        margin: 0 auto;
+        li{
+            width:100%;
+        }
+    }
     
 /* Actions ***/
     #actions {
