CICO-37131 Updated all areas and fixed close issue

--- a/login/partials/stationLogin.html
+++ b/login/partials/stationLogin.html
@@ -37,6 +37,6 @@
 	</form>
 
 	<div class="support">
-		For questions please contact your hotel administrator or visit the StayNTouch <a href="https://stayntouch.freshdesk.com/support/home">Support Portal</a> for more information.
+		For questions please contact your hotel administrator or visit the StayNTouch <a href="#" ng-click="onClickSupportLink()">Support Portal</a> for more information.
 	</div>
 </div>
