--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -475,7 +475,7 @@
 
             .upgrade-picture {
                 width: 100%;
-                height: 185px;
+                height: 40%;
                 overflow: hidden;
 
                 img {
@@ -527,9 +527,9 @@
                 background: @white;
 
                 .upgrade-picture {
-                    height: 160px;
+                    height: 40%;
                     img { 
-                        height: 185px;
+                        height: 100%;
                     }
                 }
 
@@ -603,28 +603,6 @@
             }
     }
 
-    @media only screen and (min-device-width : 768px) and (max-device-width : 1024px)  {  
-        .upgrade-list {
-            li{
-                .upgrade-picture {
-                    height: 100px;
-                    img { 
-                        height: 100px;
-                    }
-                }
-            }
-            &.upgrade-list-v2 {
-                 li{
-                    .upgrade-picture {
-                        height: 100px;
-                        img { 
-                            height: 100px;
-                        }
-                    }
-                }
-            }
-        }
-    }
 
     .two-upgrades-list{
         width: 66%;
