--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -333,6 +333,12 @@
 
 
 /* Upgrade Box **/
+    #main.upgrades-section{
+        padding-top:44px;
+    }
+    #actions.upgrades-list-actions{
+        bottom:18px;
+    }
     #upgrade {
         position: relative;
         color: @black;
@@ -454,7 +460,8 @@
 
     .upgrade-list {
         width: 100%;
-        #calc > #height > .remove( 100%, 230px );
+        #calc > #height > .remove( 100%, 210px );
+        max-height: 550px;
         &:after {
             clear:both;
             content:'';
@@ -475,7 +482,7 @@
 
             .upgrade-picture {
                 width: 100%;
-                height: 40%;
+                height: 60%;
                 overflow: hidden;
 
                 img {
@@ -495,6 +502,7 @@
 
                 h2 {
                     text-align: left;
+                    font-size: 1.3em;
                 }
 
                 .price {
@@ -527,7 +535,7 @@
                 background: @white;
 
                 .upgrade-picture {
-                    height: 40%;
+                    height: 60%;
                     img { 
                         height: 100%;
                     }
@@ -538,6 +546,7 @@
                     color: @black;
                     padding: 10px 15px 105px 15px;
                     #calc > #height > .remove( 100%, 160px );
+                    bottom:0;
 
                     .price {
                         bottom: 15px;
@@ -566,7 +575,6 @@
                         height: 140px;
                         width: 100%;
                         position: absolute;
-                        bottom: 0; 
                         left: 0;
                         z-index: 99;
 
