CICO-36470 updated main texts to uppercase and custom font used

--- a/guestweb/common_css/public_ny/theme.less
+++ b/guestweb/common_css/public_ny/theme.less
@@ -7,9 +7,14 @@ html,body{
 }
 body{
     background-color:#FFF;
+     font-family: Gotham Rounded A;
 }
 .back-text{
     color:#fff ;
+}
+.main-text, .btn{
+  text-transform: uppercase;
+  font-weight: bolder;
 }
 a,a:hover,.main-text,
 .res-date,
