--- a/rover/partials/allotments/reservations/rvAllotmentReservationsListTab.html
+++ b/rover/partials/allotments/reservations/rvAllotmentReservationsListTab.html
@@ -196,8 +196,8 @@
 	                <a ng-click="onClickReservation(reservation)">
 	                    <div class="data">
 	                        <h2 ng-show="!isGuestBlank(reservation)">
-								<span class="no-margin-right" ng-bind-html="{{stringify(escapeNull(reservation.lastname))}}|highlight:searchQuery:false"></span>,
-								<span ng-bind-html="{{stringify(escapeNull(reservation.firstname))}}|highlight:searchQuery:false"></span>                        
+								<span class="no-margin-right" ng-bind-html="escapeNull(reservation.lastname)|highlight:searchQuery:false"></span>,
+								<span ng-bind-html="escapeNull(reservation.firstname)|highlight:searchQuery:false"></span>
 	                         	<!--Guest last name, first name will appear here by ng-bind-html -->
 	                        </h2>
 	                        <h2 ng-show="isGuestBlank(reservation)">
@@ -207,7 +207,7 @@
 	                        <span class="room" ng-show="!isRoomUnAssigned(reservation)">
 	                            <!-- Add class "unassigned" if new room -->
 	                            {{'ALLOTMENT_ROOM'|translate}} 
-	                            <span ng-class="getRoomStatusClass(reservation)" ng-bind-html="{{stringify(escapeNull(reservation.room_number))}}|highlight:searchQuery:false">
+	                            <span ng-class="getRoomStatusClass(reservation)" ng-bind-html="escapeNull(reservation.room_number)|highlight:searchQuery:false">
 	                            </span>
 	                            <!-- If new room, show this instead: Unassigned -->
 	                        </span>
@@ -215,7 +215,7 @@
 	                           {{'ALLOTMENT_UNASSIGNED'|translate}} 
 	                        </span> 
 	                        |
-	                       	<span class="confirmation" ng-bind-html="{{stringify(escapeNull(reservation.confirm_no))}}|highlight:searchQuery:false"></span>
+	                       	<span class="confirmation" ng-bind-html="escapeNull(reservation.confirm_no)|highlight:searchQuery:false"></span>
 	                        </div>
 	                        <div class="reservation-info">
 	                            <div class="arrival-departure">
