--- a/rover/partials/allotments/search/rvAllotmentSearch.html
+++ b/rover/partials/allotments/search/rvAllotmentSearch.html
@@ -107,9 +107,9 @@
             <li class="group" ng-show="!shouldShowNoResult()" ng-repeat="allotment in allotmentList" ngrepeatend ngrepeatstarted>
                 <a ng-click="gotoEditAllotmentConfiguration(allotment.id)">
                     <div class="data">
-                        <h2 ng-bind-html="{{escapeNull(stringify(allotment.allotment_name))}}|highlight:query:false">
+                        <h2 ng-bind-html="escapeNull(allotment.allotment_name)|highlight:query:false">
                         </h2>
-                        <span class="confirmation" ng-bind-html="{{stringify(escapeNull(allotment.allotment_code))}}|highlight:query:false"></span>
+                        <span class="confirmation" ng-bind-html="escapeNull(allotment.allotment_code)|highlight:query:false"></span>
                         <!-- If linked company exists: -->
                         <span class="icons icon-guest-company" ng-hide="isEmpty(allotment.company)">
                             {{allotment.company}}
