--- a/rover/partials/cards/contents/allotments/rvAllotmentCardSearchResults.html
+++ b/rover/partials/cards/contents/allotments/rvAllotmentCardSearchResults.html
@@ -6,8 +6,8 @@
                 <div class="guest-image icons icon-allotment"></div>
                 <a ng-click="selectAllotment(allotment, $event)">
                     <div class="data">
-                        <h2 ng-bind-html="{{stringify(escapeNull(allotment.group_name))}} | highlight:searchData.groupCard.name:false">              </h2>
-                        <span class="confirmation" ng-bind-html="{{stringify(escapeNull(allotment.group_code))}} | highlight:searchData.groupCard.code:false"></span>
+                        <h2 ng-bind-html="escapeNull(allotment.group_name)| highlight:searchData.groupCard.name:false">              </h2>
+                        <span class="confirmation" ng-bind-html="escapeNull(allotment.group_code)| highlight:searchData.groupCard.code:false"></span>
                         <!-- If linked company exists: -->
                         <span class="icons icon-guest-company" ng-hide="isEmpty(allotment.company)">
                             {{allotment.company}}
