--- a/rover/partials/cards/groupCardContent.html
+++ b/rover/partials/cards/groupCardContent.html
@@ -34,8 +34,8 @@
                         <a ng-click="selectToGroupORAllotment(result, $event)">
                             <div class="guest-image icons" ng-class="{'icon-group' : result.type === 'GROUP', 'icon-allotment' : result.type === 'ALLOTMENT'}"></div>
                             <div class="data">
-                                <h2 ng-bind-html="{{stringify(escapeNull(result.name))}} | highlight:searchData.groupCard.name:false">              </h2>
-                                <span class="confirmation" ng-bind-html="{{stringify(escapeNull(result.code))}} | highlight:searchData.groupCard.code:false"></span>
+                                <h2 ng-bind-html="escapeNull(result.name) | highlight:searchData.groupCard.name:false">              </h2>
+                                <span class="confirmation" ng-bind-html="escapeNull(result.code) | highlight:searchData.groupCard.code:false"></span>
                                 <!-- If linked company exists: -->
                                 <span class="icons icon-guest-company" ng-hide="isEmpty(result.company)">
                                     {{result.company}}
