CICO-33971, fix for bill amount getting zeroed for Direct Bill.

--- a/rover/partials/payment/rvReservationBillPaymentPopup.html
+++ b/rover/partials/payment/rvReservationBillPaymentPopup.html
@@ -12,7 +12,7 @@
             <div class="select">
                 <!-- number of options should match the number of bills created -->
                 <select name="post-charge-to-bill" ng-model="renderData.billNumberSelected"
-                        ng-change="billNumberChanged()">
+                        ng-change="billNumberChanged()" ng-disabled="checkPaymentTypeIsDirectBill()">
                     <option ng-repeat="bills in billsArray"
                             value="{{bills.bill_number}}"
                             ng-selected="bills.bill_number == renderData.billNumberSelected">
