--- a/login/partials/login.html
+++ b/login/partials/login.html
@@ -38,6 +38,7 @@
 	</form>
 
 	<div class="support">
-		For questions please contact your hotel administrator or visit the StayNTouch <a href="https://stayntouch.freshdesk.com/support/home">Support Portal</a> for more information.
+		For questions or support please contact your hotel administrator or the StayNTouch service team at
+		<a href="mailto:support@stayntouch.com">support@stayntouch.com</a>
 	</div>
 </div>
