CICO-37328 Fixed instances using ngBindHtml directive and other minor changes

--- a/rover/partials/companyCard/rvCompanyCardArTransactions.html
+++ b/rover/partials/companyCard/rvCompanyCardArTransactions.html
@@ -112,19 +112,22 @@
                             <span class="vip" ng-if="transaction.guest_is_vip">VIP</span>
                         </figure>
                         <div class="data" ng-if="transaction.associated_type == 'Reservation'">
-                            <h2><span ng-bind-html="'{{transaction.guest_first_name}}'|highlight:filterData.textInQueryBox:false"></span> <span ng-bind-html="'{{transaction.guest_last_name}}'|highlight:filterData.textInQueryBox:false"></span></h2>
+                            <h2>
+                                <span ng-bind-html="transaction.guest_first_name | highlight:filterData.textInQueryBox:false"></span>
+                                <span ng-bind-html="transaction.guest_last_name | highlight:filterData.textInQueryBox:false"></span>
+                            </h2>
                             <span class="confirmation" ng-if="transaction.external_reference_number">
                                 EXT. REF: 
-                                <span class="value" ng-bind-html="'{{transaction.external_reference_number}}'|highlight:filterData.textInQueryBox:false"></span>
+                                <span class="value" ng-bind-html="transaction.external_reference_number|highlight:filterData.textInQueryBox:false"></span>
                             </span>
                             <span class="confirmation" ng-if="transaction.reservation_confirm_no && !transaction.external_reference_number">
                                 CONF. NO:
-                                <span class="value" ng-bind-html="'{{transaction.reservation_confirm_no}}'|highlight:filterData.textInQueryBox:false"></span>
+                                <span class="value" ng-bind-html=" transaction.reservation_confirm_no |highlight:filterData.textInQueryBox:false"></span>
                             </span>
                             <div class="information">
                                 <span class="invoice">
                                     Inv.  
-                                    <span class="value" ng-bind-html="'{{transaction.invoice_number}}'|highlight:filterData.textInQueryBox:false"></span>
+                                    <span class="value" ng-bind-html="transaction.invoice_number |highlight:filterData.textInQueryBox:false"></span>
                                 </span> 
                                 <div class="arrival">
                                     <span class="guest-status small-icon check-in">CHECK-IN</span>
