--- a/rover/partials/cards/guestCardContent.html
+++ b/rover/partials/cards/guestCardContent.html
@@ -55,14 +55,14 @@
                             </figure>
                             <div class="data" ng-class="{'no-stay': guest.stayCount == 0}">
                                 <h2>
-                                    <span ng-bind-html="'{{guest.firstName}}' | highlight:searchData.guestCard.guestFirstName:false"></span>
-                                    <span ng-bind-html="'{{ guest.lastName }}' | highlight:searchData.guestCard.guestLastName:false"></span>
+                                    <span ng-bind-html="guest.firstName | highlight:searchData.guestCard.guestFirstName:false"></span>
+                                    <span ng-bind-html="guest.lastName | highlight:searchData.guestCard.guestLastName:false"></span>
                                 </h2>
                                 <span class="stay-count" ng-if="guest.stayCount > 1">{{ guest.stayCount }} stays</span>
                                 <span class="stay-count" ng-if="guest.stayCount == 1">{{ guest.stayCount }} stay</span>
                                 <span class="confirmation" ng-if="guest.address.postalCode != '' && guest.address.postalCode != null">{{ guest.address.postalCode}}</span>
                                 <span class="icons icon-location" ng-hide = "(guest.address.city == null || guest.address.city == '') && (guest.address.state =='' || guest.address.state == null)">
-                                    <span ng-bind-html="'{{guest.address.city}}'|highlight:searchData.guestCard.guestCity:false"></span>
+                                    <span ng-bind-html="guest.address.city | highlight:searchData.guestCard.guestCity:false"></span>
                                     <span ng-hide="guest.address.city == null || guest.address.city == '' || guest.address.state =='' || guest.address.state == null">, </span>
                                     <span>{{ guest.address.state }}</span>
                                 </span>
