CICO-36470 CICO-36471 updated gotham font

--- a/guestweb/common_css/font.less
+++ b/guestweb/common_css/font.less
@@ -101,3 +101,12 @@
     font-weight: 400;
     font-style: normal;
 }
+@font-face {
+    font-family: 'Gotham';
+    src: url('/assets/type/Gotham/GothamBook.otf');
+    src: url('/assets/type/Gotham/GothamBook.eot?#iefix') format('embedded-opentype'), 
+    url('/assets/type/Gotham/GothamBook.woff') format('woff'), 
+    url('/assets/type/Gotham/GothamBook.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
