--- a/guestweb/common_css/public_ny/theme.less
+++ b/guestweb/common_css/public_ny/theme.less
@@ -9,7 +9,7 @@ body {
 
 body {
     background-color: #FFF;
-    font-family: Gotham Rounded A;
+    font-family: "Gotham";
 }
 
 .back-text {
@@ -81,7 +81,7 @@ a:hover,
 .btn-template {
     font-size: 27px;
     font-weight: 900;
-    padding: 4%;
+    padding: 6%;
 }
 
 .dark-button,
@@ -255,6 +255,33 @@ a:hover,
     height: 40px;
 }
 
+.row {
+    margin-bottom: 21px;
+}
+
+.circle-bg {
+    background: none;
+}
+
+.time {
+    font-size: 57px;
+    display: block;
+}
+
+.late-charge br {
+    display: none;
+}
+
+.for {
+    line-height: 0 !important;
+    font-size: 10px;
+    margin-right: 7px;
+}
+
+.amount {
+    margin-top: -27px;
+}
+
 @media (max-width: 990px) {
     .logo-image {
         margin: 9% auto 7%;
@@ -270,6 +297,19 @@ a:hover,
     .main-text {
         font-size: 36px;
     }
+    .checkout-alone-button {
+        float: left;
+        margin-left: 129px;
+    }
+    .sub-main-text {
+        font-size: 20px;
+    }
+}
+
+@media (min-width: 990px){
+  .main-text {
+   font-size: 28px;
+  } 
 }
 
 @media (max-width: 480px) {
@@ -295,22 +335,4 @@ a:hover,
     .section-container {
         padding-bottom: 0px;
     }
-}
-
-.circle-bg {
-    background: none;
-}
-
-.time {
-    font-size: 44px;
-    display: block;
-}
-
-.late-charge br {
-    display: none;
-}
-
-.for {
-    line-height: 0;
-    font-size: 12px;
 }
