CICO-36269 - Style update, Icons update

--- a/stylesheets/less/app/03_graphics.less
+++ b/stylesheets/less/app/03_graphics.less
@@ -680,6 +680,8 @@
         &.icon-balance { background-position: 0 -450px; }
         &.icon-cards { background-position: 0 -480px; }
         &.icon-room { background-position: 0 -660px; }
+        &.icon-action { background-position: 0px -691px; }
+        &.icon-travel-agent { background-position: 0px -720px; }
 
 		@media @highdpi {
 			background-image: @iconReports2x;
