CICO-36470 CICO-36471 added gotham book italic font

--- a/guestweb/common_css/font.less
+++ b/guestweb/common_css/font.less
@@ -120,3 +120,12 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'Gotham Book Italic';
+    src: url('/assets/type/Gotham/GothamBookItalic.otf');
+    src: url('/assets/type/Gotham/GothamBookItalic.eot?#iefix') format('embedded-opentype'), 
+    url('/assets/type/Gotham/GothamBookItalic.woff') format('woff'), 
+    url('/assets/type/Gotham/GothamBookItalic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
