CICO-36470 Style changes

--- a/guestweb/common_css/font.less
+++ b/guestweb/common_css/font.less
@@ -129,3 +129,12 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'Gotham Light';
+    src: url('/assets/type/Gotham/GothamLight.otf');
+    src: url('/assets/type/Gotham/GothamLight.eot?#iefix') format('embedded-opentype'), 
+    url('/assets/type/Gotham/GothamLight.woff') format('woff'), 
+    url('/assets/type/Gotham/GothamLight.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
