--- a/guestweb/common_css/public_ny/theme.less
+++ b/guestweb/common_css/public_ny/theme.less
@@ -17,13 +17,13 @@ body {
 }
 
 .main-text,
-.btn {
-    font-family: "Gotham Ultra" !important;
+.btn{
+    font-family: "Gotham Ultra" ;
+    text-transform: uppercase;
+    font-weight: bolder;
 }
-
-text-transform: uppercase;
-font-weight: bolder;
-
+.strong-font{
+  font-family: "Gotham Ultra" ;
 }
 a,
 a:hover,
@@ -34,16 +34,20 @@ a:hover,
 .phone-label {
     color: #363d40;
 }
+
 .sub-main-text {
     color: #363d40;
 }
+
 .header-bar {
     background: #fff;
 }
+
 .logo-image {
     max-width: 100%;
     margin: 4% auto 2%;
 }
+
 .template-text,
 .footer-text,
 .balance-amount,
@@ -53,8 +57,12 @@ a:hover,
 .error-text {
     color: #363d40;
 }
+
 .view-bill {
     color: #363d40;
+}
+.sub-text{
+  font-family: "Gotham Light"
 }
 .sub-text,
 .sub-text:hover,
@@ -63,89 +71,111 @@ a:hover,
 .light-text {
     color: #363d40;
 }
+
 .btn,
 .btn:hover {
     background: #000;
     color: @white;
 }
+
 .dual-button {
     font-size: 26px;
     font-weight: 900;
 }
+
 .btn-template {
-    font-size: 27px;
-    font-weight: 900;
-    padding: 6%;
+    font-size: 26px;
+    padding: 4%;
 }
+
 .dark-button,
 .dark-button:hover {
     background: #000;
 }
+
 .light-button,
 .light-button:hover {
-    background: #3F3F3F;
+    background: #000;
 }
+
 .checkouttime1,
 .checkouttime1:hover {
-    background: #515151;
+    background: #000;
 }
+
 .checkouttime2,
 .checkouttime2:hover {
-    background: #3F3F3F;
+    background: #000;
 }
+
 .checkouttime3,
 .checkouttime3:hover {
     background: #000;
 }
+
 .no-thanks,
 .no-thanks:hover {
     color: fff;
     text-decoration: underline;
     text-transform: none;
 }
+
 .strong-font {
     font-weight: 500;
 }
+
 .amount,
 .time {
     font-size: 30px;
     line-height: 1.2;
 }
+
 .down-arrow-button {
     background-image: url('/assets/guestweb/common_images/black/down_arrow.png');
 }
+
 .right-arrow-button {
     background-image: url('/assets/guestweb/common_images/black/right_arrow.png');
 }
+
 .upgrade-details .upgrades-btn {
     background: #000;
 }
+
 .proceed-to-checkin {
     background: #3D3D3B;
 }
+
 .upgrades-label {
     color: #BA7A55;
 }
 
+
 /*----------------- date picker -------------------------*/
+
 .pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {
     color: #000;
     color: transparent;
 }
+
 .pickadate-cell .pickadate-enabled,
 .pickadate-centered-heading {
     color: #000;
 }
+
 .pickadate-cell .pickadate-active {
     background-color: #000 !important;
     color: #fff;
 }
+
 .pickadate-head {
     color: #000000;
 }
+
 .calendar-selection {
     color: #fff;
 }
+
 .pickadate-cell li:nth-child(1),
 .pickadate-cell li:nth-child(8),
 .pickadate-cell li:nth-child(15),
@@ -154,144 +184,164 @@ a:hover,
 .pickadate-cell li:nth-child(36) {
     border-left: 1px solid #fff;
 }
+
 .pickadate-cell .pickadate-disabled,
 .pickadate-cell .pickadate-enabled,
 .pickadate-cell .pickadate-outofrange-disabled {
     background-color: #EEEBE8;
 }
+
 .pickadate-cell .pickadate-disabled,
 .pickadate-cell .pickadate-disabled a {
     color: #ac9557;
 }
+
 .pickadate-cell li {
     border: 1px solid #FFF;
 }
+
 .pickadate a:visited,
 .pickadate a {
     color: #666666;
 }
+
 .date-picker-header {
     background-color: #000;
 }
+
 .calendar-back {
     background-image: url('/assets/guestweb/common_images/back_icon.png');
 }
+
 .calendar-done {
     background-image: url('/assets/guestweb/common_images/done_white.png');
 }
+
 .pickadate-prev,
 .pickadate-next,
 .pickadate-prev:hover,
 .pickadate-next:hover {
-    color: #3F3F3F;
+    color: #000;
 }
+
 .date-picker-wrap {
     background-color: #fff;
 }
+
 .date-picker-bg {
     background: unset;
 }
+
 .horizontal-line-sep-mobile {
     border-top: 1px solid #9b9b9b;
 }
+
 .departure-date {
     color: #fff;
 }
+
 .date-text {
     color: #fff;
 }
+
 .logo-image {
     margin: 1% auto;
     max-width: unset;
 }
+
 .res-details-heading,
 .res-details-heading:hover {
-    color: #3F3F3F;
+    color: #000;
 }
+
 .back-to-checkout {
     background: url(/assets/guestweb/common_images/black/left_arrow.png) center top no-repeat;
     height: 40px;
 }
+
 .row {
     margin-bottom: 21px;
 }
+
 .circle-bg {
     background: none;
 }
+
 .time {
-    font-size: 57px;
+    font-size: 100px;
     display: block;
 }
+
 .late-charge br {
     display: none;
 }
+
 .for {
-    line-height: 0 !important;
+    // line-height: 0 !important;
     font-size: 10px;
     margin-right: 7px;
 }
-.amount {
-    margin-top: -27px;
+
+// .amount {
+//     margin-top: -27px;
+// }
+.triple-button{
+  border-right: 1px inset #6A6A6A;
 }
+
 @media (max-width: 990px) {
     .logo-image {
         margin: 9% auto 7%;
         max-width: unset;
     }
-    
     .back-to-checkout {
         display: none;
     }
-    
     .btn-template,
     .dual-button {
-        font-size: 17px;
+        font-size: 40px;
     }
-    
     .main-text {
-        font-size: 36px;
+        font-size: 50px;
     }
-    
     .checkout-alone-button {
         float: left;
         margin-left: 129px;
     }
-    
     .sub-main-text {
-        font-size: 20px;
+        font-size: 27px;
     }
 }
+
 @media (min-width: 990px) {
     .main-text {
-        font-size: 28px;
+        font-size: 50px;
     }
+    .sub-main-text {
+    font-size: 24px;
 }
+}
+
 @media (max-width: 480px) {
     .main-text {
-        font-size: 8vw;
+        font-size: 10vw;
     }
-    
     .container {
         width: 100%;
     }
-    
     .sub-main-text {
-        font-size: 5.4vw;
+        font-size: 17px;
     }
-    
     .footer-text {
         font-size: 5.3vw;
     }
-    
     .logo-image {
         max-width: 200px;
         margin: 3% auto;
     }
-    
     .dual-button {
         font-size: 23px;
     }
-    
     .section-container {
         padding-bottom: 0px;
     }
