CICO-37238 Fixed terms and conditions checkbox not appearing while checkin issue.

--- a/rover/partials/bill/rvSignature.html
+++ b/rover/partials/bill/rvSignature.html
@@ -11,11 +11,11 @@
 		</div>
 	</div>
 	<div class="entry">
-		<label id="terms-and-conditions" for="terms" class="checkbox inline" ng-hide="reservationBillData.is_disabled_terms_conditions_checkin">
+		<label class="checkbox inline" ng-show="reservationBillData.is_disabled_terms_conditions_checkin === 'false'">
 			<span class="icon-form icon-checkbox" ng-class="{'checked': saveData.termsAndConditions}"></span>
 			<input type="checkbox" class = "termsandconditions-checkbox" ng-model="saveData.termsAndConditions">
 			<div class = "agree-terms-and-conditions" click-touch = "termsAndConditionsClicked()">{{ 'T_AND_C_TEXT' | translate }}</div> </label>
-		<label id="subscribe-via-email" for="subscribe" class="checkbox inline checked">
+		<label id="subscribe-via-email" class="checkbox inline checked">
 			<span class="icon-form icon-checkbox" ng-class="{'checked': saveData.promotions}"></span>
 			<input type="checkbox" value="1" name="checkin" checked="" ng-model="saveData.promotions">
 			{{ 'PROMO_NEWS_BY_EMAIL_TEXT' | translate }} </label>
