CICO-37356 updated checkout pages styles

--- a/guestweb/common_css/hotel_chicago/theme.less
+++ b/guestweb/common_css/hotel_chicago/theme.less
@@ -262,6 +262,7 @@ a:hover,
     .accept-charges,
     {
         width: 377px;
+        padding: 4% 0%;
     }
     .dual-button {
         font-size: 28px;
